--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -64,9 +64,8 @@ commands:
     aliases: [ql]
     usage: /<command> [manual] [minutes]
     permission: beaconwar.admin
-  balanced_teams:
+  balancedteams:
     description: Preview balanced team assignments
-    aliases: [balancedteams]
     usage: /<command>
     permission: beaconwar.use
   status:
